# ctti

./: Cargo.toml  README.md
src/: impls.rs  lib.rs  type_id.rs
