[package]
name = "ctti"
version = "0.2.0"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
description = "Compile-time type information"
documentation = "https://docs.rs/ctti"
repository = "https://github.com/h33p/ctti"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
